Add Font Awesome, MUI, and Roboto CSS for offline support
- Added Font Awesome CSS (version 4.7.0) for icon usage.
- Introduced minimal Material UI CSS for basic styling.
- Included Roboto font-face for consistent typography.
- Updated grafana.db binary file.

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zemfyre Admin Landing</title>
   <!-- Material UI (MUI) CSS via local file -->
-  <link rel="stylesheet" href="mui.min.css" />
+  <link rel="stylesheet" href="public/css/mui.min.css" />
   <!-- Roboto font (local fallback) -->
-  <link rel="stylesheet" href="roboto.css" />
+  <link rel="stylesheet" href="public/css/roboto.css" />
+  <link rel="stylesheet" href="public/css/font-awesome.min.css" />
 </head>
 <body>
   <div id="root"></div>
