Add contact information to slides 5-10
- Created new HTML files for slides 5 to 10.
- Each slide contains a message inviting users to reach out for more information about products, partnerships, or design services.
- Included links to the Zemfyre website and an email address for inquiries.

--- a/admin/public/slides/slide1.html
+++ b/admin/public/slides/slide1.html
@@ -1,1 +1,64 @@
-<div></div>
+<div>
+<style>
+    h1 {
+      color: #c00000;
+    }
+    a {
+      color: #c00000;
+      text-decoration: none;
+    }
+    .container {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .left {
+      max-width: 45%;
+    }
+    .right img {
+      max-width: 100%;
+      border-radius: 6px;
+    }
+    .footer {
+      margin-top: 50px;
+      font-size: 0.85em;
+      color: #666;
+    }
+    .made-in-canada {
+      display: flex;
+      align-items: center;
+      margin-top: 20px;
+    }
+    .made-in-canada img {
+      height: 40px;
+      margin-right: 10px;
+    }
+  </style>
+
+  <div class="container">
+    <div class="left">
+      <p>Zemfyre develops and manufactures innovative industrial communication solutions based on revolutionary Single Pair Ethernet (SPE).</p>
+
+      <img src="slide_1.png" alt="QR Code" style="width: 120px; margin: 20px 0;">
+
+      <p><a href="mailto:info@zemfyre.com">info@zemfyre.com</a><br>
+         <a href="http://www.zemfyre.com" target="_blank">www.zemfyre.com</a></p>
+
+      <div class="made-in-canada">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Made_in_Canada.svg/200px-Made_in_Canada.svg.png" alt="Made in Canada">
+        <strong>All products made in Canada</strong>
+      </div>
+    </div>
+
+    <div class="right">
+      <img src="./public/images/toronto_skyline.jpg" alt="Toronto Skyline">
+    </div>
+  </div>
+
+  <div class="footer">
+    &copy; 2025 ZEMFYRE Inc. Proprietary and Confidential. All rights reserved. The Copyright in this document belongs to ZEMFYRE Inc. and no part of this document should be used or copied without their prior written permission.
+  </div>
+
+
+</div>
