--- a/admin/public/slides/slide2.html
+++ b/admin/public/slides/slide2.html
@@ -1,1 +1,56 @@
-<div>ZEMFYRE is a leading provider of innovative patent-pending Industrial Ethernet Solutions for enabling secure IIoT Cloud connectivity and acceleration of Industry 4.0 adoption. ZEMFYRE uses the latest game-changing Single Pair Ethernet (SPE) standard to provide seamless secure Ethernet connectivity and power to Field level IIoT devices (sensors and actuators).</div>
+<style>
+  .zemfyre-slide {
+    font-family: Arial, sans-serif;
+    margin: 40px 0;
+    background-color: #fff;
+    color: #333;
+  }
+  .zemfyre-slide h1 {
+    color: #c00000;
+    font-size: 28px;
+  }
+  .zemfyre-slide .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  .zemfyre-slide .left {
+    flex: 1;
+    max-width: 65%;
+  }
+  .zemfyre-slide .right {
+    flex: 1;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    color: #555;
+    margin-top: 20px;
+  }
+  .zemfyre-slide img {
+    max-width: 100%;
+    border-radius: 6px;
+    box-shadow: 0 0 6px rgba(0,0,0,0.1);
+  }
+  .zemfyre-slide .footer {
+    margin-top: 40px;
+    font-size: 0.85em;
+    color: #666;
+  }
+</style>
+
+<div class="zemfyre-slide">
+
+  <div class="container">
+    <div class="left">
+      <img src="slide_2.png" alt="ZEMFYRE Alliance Logos">
+    </div>
+    <div class="right">
+      70+ MEMBERS
+    </div>
+  </div>
+
+  <div class="footer">
+    &copy; 2025 ZEMFYRE Inc. Proprietary and Confidential. All rights reserved. The Copyright in this document belongs to ZEMFYRE Inc. and no part of this document should be used or copied without their prior written permission.
+  </div>
+</div>
