Refactor code structure for improved readability and maintainability

--- a/admin/public/slides/slide2.html
+++ b/admin/public/slides/slide2.html
@@ -1,56 +1,1 @@
-<style>
-  .zemfyre-slide {
-    font-family: Arial, sans-serif;
-    margin: 40px 0;
-    background-color: #fff;
-    color: #333;
-  }
-  .zemfyre-slide h1 {
-    color: #c00000;
-    font-size: 28px;
-  }
-  .zemfyre-slide .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-  .zemfyre-slide .left {
-    flex: 1;
-    max-width: 65%;
-  }
-  .zemfyre-slide .right {
-    flex: 1;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-    color: #555;
-    margin-top: 20px;
-  }
-  .zemfyre-slide img {
-    max-width: 100%;
-    border-radius: 6px;
-    box-shadow: 0 0 6px rgba(0,0,0,0.1);
-  }
-  .zemfyre-slide .footer {
-    margin-top: 40px;
-    font-size: 0.85em;
-    color: #666;
-  }
-</style>
-
-<div class="zemfyre-slide">
-
-  <div class="container">
-    <div class="left">
-      <img src="slide_2.png" alt="ZEMFYRE Alliance Logos">
-    </div>
-    <div class="right">
-      70+ MEMBERS
-    </div>
-  </div>
-
-  <div class="footer">
-    &copy; 2025 ZEMFYRE Inc. Proprietary and Confidential. All rights reserved. The Copyright in this document belongs to ZEMFYRE Inc. and no part of this document should be used or copied without their prior written permission.
-  </div>
-</div>
+<img src="./public/images/page_2.png" alt="Slide 2" style="max-width:100%;height:auto;" />
