--- a/admin/public/slides/slide3.html
+++ b/admin/public/slides/slide3.html
@@ -1,11 +1,1 @@
-<div>ZEMFYRE develops and manufactures innovative industrial communication solutions based on revolutionary Single Pair Ethernet (SPE) and Zemfyre’s patent-pending technology.</div>
-<div>This technology:</div>
-<ul style="margin-top:10px;">
-  <li>Enables OT/IT convergence</li>
-  <li>Provides seamless and secure cloud connectivity to field level devices (sensors, actuators)</li>
-  <li>Extends Ethernet reach to 1,700m, instead of 100m</li>
-  <li>Powers devices using PoDL standard</li>
-  <li>Removes expensive Gateways</li>
-  <li>Enables IIoT’s predictive maintenance</li>
-  <li>Reduces downtime, increases reliability</li>
-</ul>
+<img src="./public/images/page_3.png" alt="Slide 3" style="max-width:100%;height:auto;" />
