--- a/admin/public/slides/slide9.html
+++ b/admin/public/slides/slide9.html
@@ -1,1 +1,1 @@
-<div>Whether it’s about our products, partnerships, or design services, we’d love to hear from you. Visit <a href="https://zemfyre.com" target="_blank">zemfyre.com</a> or email <a href="mailto:info@zemfyre.com">info@zemfyre.com</a> for more information.</div>
+<img src="./public/images/page_9.png" alt="Slide 9" style="max-width:100%;height:auto;" />
