fix: update image handling in slides for better responsiveness and remove inline styles refactor: adjust HomeSlides interval timing and improve image processing chore: remove unused max31855 service from docker-compose

--- a/admin/public/slides/slide10.html
+++ b/admin/public/slides/slide10.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_10.png" alt="Slide 10" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_10.png" alt="Slide 10" />
