--- a/admin/public/slides/slide2.html
+++ b/admin/public/slides/slide2.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_2.png" alt="Slide 2" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_2.png" alt="Slide 2" />
