--- a/admin/public/slides/slide6.html
+++ b/admin/public/slides/slide6.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_6.png" alt="Slide 6" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_6.png" alt="Slide 6" />
