--- a/admin/public/slides/slide3.html
+++ b/admin/public/slides/slide3.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_3.png" alt="Slide 3" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_3.png" alt="Slide 3" />
