--- a/admin/public/slides/slide4.html
+++ b/admin/public/slides/slide4.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_4.png" alt="Slide 4" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_4.png" alt="Slide 4" />
