--- a/admin/public/slides/slide5.html
+++ b/admin/public/slides/slide5.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_5.png" alt="Slide 5" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_5.png" alt="Slide 5" />
