--- a/admin/public/slides/slide7.html
+++ b/admin/public/slides/slide7.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_7.png" alt="Slide 7" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_7.png" alt="Slide 7" />
