--- a/admin/public/slides/slide8.html
+++ b/admin/public/slides/slide8.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_8.png" alt="Slide 8" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_8.png" alt="Slide 8" />
