--- a/admin/public/slides/slide9.html
+++ b/admin/public/slides/slide9.html
@@ -1,1 +1,1 @@
-<img src="./public/images/page_9.png" alt="Slide 9" style="max-width:100%;height:auto;" />
+<img src="./public/images/page_9.png" alt="Slide 9" />
